--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/purple_500"
     tools:context=".MainActivity">
 
     <TextView
@@ -13,9 +14,11 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="194dp"
-        android:layout_marginTop="178dp"
-        android:text="0°" />
+        android:layout_marginStart="149dp"
+        android:layout_marginTop="97dp"
+        android:text="23°"
+        android:textColor="@android:color/background_light"
+        android:textSize="72sp" />
 
     <TextView
         android:id="@+id/tvCiudad"
@@ -24,7 +27,9 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="212dp"
-        android:text="Felipe Carrillo Puerto" />
+        android:text="Felipe Carrillo Puerto"
+        android:textColor="@color/color_ciudad"
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/tvEstatus"
@@ -32,6 +37,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="248dp"
-        android:text="Nublado" />
+        android:layout_marginTop="273dp"
+        android:text="Nublado"
+        android:textColor="@color/color_estatus"
+        android:textSize="24sp" />
 </RelativeLayout>
