--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="color_grados">#ffffff</color>
+    <color name="color_ciudad">#F8F9FF</color>
+    <color name="color_estatus">#7B8DFF</color>
 </resources>
